# OS

CP/doc/: report.docx
CP/src/: C.cpp
lab1/doc/: report.docx
lab1/src/: dynamic.txt
lab2/: main.c
lab2/doc/: report2.odt
lab2/src/: CMakeLists.txt  main.c  test.txt
lab3/: CMakeLists.txt  main.c
lab3/doc/: report3.odt
lab3/src/: main.c
lab4/doc/: report4.odt
lab4/src/: CMakeLists.txt  a_out.g  child0  child0.c  child1  child1.c  main.c  memwork.h  test.txt
lab5/doc/: report5.odt
lab5/src/: dynamic_main.c  realization.h  realization1.c  realization2.c  static_main.c
lab6_8/doc/: report.docx
lab6_8/src/: Makefile  calc_node.h  client.cpp  server.cpp  topology.h
